# tictactoe-c

./: .clang-format  .dockerignore  .editorconfig  .gitignore  AUTHORS  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_ja.md  README_zh.md  SECURITY.md  docker-compose.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
bench/: bench_win_check.c
docs/: Doxyfile
examples/: sample_game.c
src/: ai.c  ai.h  game.c  game.h  main.c  version.h.in
tests/: test_ai.c  test_game.c
